Buildbot crash output: fuzz-2012-04-14-9084.pcap
This issue was migrated from bug 7085 in our old bug tracker.
Original bug information:
Reporter: Buildbot Builder
Status: RESOLVED FIXED
Product: Wireshark
Component: TShark
OS: Ubuntu
Platform: x86-64
Version: unspecified
Attachments:
fuzz-2012-04-14-9084.pcap.reduce: Reduced version of fuzz-2012-04-14-9084.pcap (3 packets)
ws_last_null_rand.patch: fixes the problem with NULL/random conversation->last pointers
fix_conversation_hash_chains.patch: Do the right thing with conversation hash chains.